ready for 26 Jan

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -27,6 +27,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Lectures'>Lectures</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Practicals'>Practicals</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Formative%20Tasks'>Formative Tasks</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Study%20Guides'>Study Guides</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#News'>News</a></li>
 <ul class='toc'><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
@@ -38,15 +39,19 @@
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a><li><a href="./SSfMT/Lectures/Computer Music.html">Computer Music</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a><li><a href="./SSfMT/Lectures/Computer Music.html">Computer Music</a><li><a href="./SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a></ul>
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
-<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a></ul>
+<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a></ul>
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
-<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 19/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 26/1</ul>
+<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 19/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 26/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 2/2</ul>
+
+<p><h3><a class='anchor' name='Study%20Guides'>Study Guides</a></h3>
+<ul>
+<li><a href="./SSfMT/Study Guides/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a></ul>
 <h2><a class='anchor' name='News'>News</a></h2>
 
 <p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Events'>Events</a></h3>
