--- a/SSfMT.html
+++ b/SSfMT.html
@@ -43,11 +43,11 @@
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
-<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a></ul>
+<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a></ul>
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
-<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 19/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 26/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 2/2</ul>
+<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 19/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 26/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 2/2<li><a href="./SSfMT/Tasks/Task 7.html">Task 7</a> - Due 9/2</ul>
 
 <p><h3><a class='anchor' name='Study%20Guides'>Study Guides</a></h3>
 <ul>
