--- a/SSfMT/Practicals/Scheduling and Patterns.html
+++ b/SSfMT/Practicals/Scheduling and Patterns.html
@@ -38,7 +38,7 @@
 <p>Patterns use <strong>Streams</strong>: a class that represents a sequence of values that are obtained with the <strong>next</strong> message.
 <p>Patterns are an easy way to make multiple streams from a single specification. It is like cloning the patterns or to switch metaphors, using a cookie cutter to produce many similar streams.<div class='note'><span class='notelabel'>NOTE:</span> Streams produce one value each time they receive a <strong>next</strong> message.</div>
 <p>Patterns are a way of specifying what a stream should do.
-<p>There are many types of Patterns, some of which, we will explore today.<h3><a class='anchor' name='Pseq'>Pseq</a></h3>
+<p>There are many types of Patterns, some of which, we will explore in this tutorial.<h3><a class='anchor' name='Pseq'>Pseq</a></h3>
 
 <p><code class='code prettyprint lang-sc'>Pseq</code> is a Pattern that produces a sequence of events that can be repeated a specified amount of times.
 <p><code class='code prettyprint lang-sc'>Pseq(list, repeats)</code>
