--- a/SSfMT.html
+++ b/SSfMT.html
@@ -28,6 +28,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Practicals'>Practicals</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Formative%20Tasks'>Formative Tasks</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Study%20Guides'>Study Guides</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Code%20Examples'>Code Examples</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#News'>News</a></li>
 <ul class='toc'><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
@@ -39,7 +40,7 @@
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a><li><a href="./SSfMT/Lectures/Computer Music.html">Computer Music</a><li><a href="./SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a><li><a href="./SSfMT/Lectures/Computer Music.html">Computer Music</a><li><a href="./SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a><li><a href="./SSfMT/Lectures/Programming Concepts 2.html">Programming Concepts 2</a></ul>
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
@@ -52,6 +53,9 @@
 <p><h3><a class='anchor' name='Study%20Guides'>Study Guides</a></h3>
 <ul>
 <li><a href="./SSfMT/Study Guides/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a></ul>
+<h3><a class='anchor' name='Code%20Examples'>Code Examples</a></h3>
+<ul>
+<li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a></ul>
 <h2><a class='anchor' name='News'>News</a></h2>
 
 <p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Events'>Events</a></h3>
