--- a/SSfMT/Study Guides/Buffer Tricks.html
+++ b/SSfMT/Study Guides/Buffer Tricks.html
@@ -13,7 +13,7 @@
 <body onload='fixTOC();prettyPrint()'>
 <div class='contents'>
 <div class='header'>
-<div id='label'>SuperCollider SSFMT/CODE EXAMPLES (extension)</div>
+<div id='label'>SuperCollider SSFMT/STUDY GUIDES (extension)</div>
 <div id='categories'><a href='./../../Browse.html#Tutorials/SSfMT'>Tutorials/SSfMT</a></div>
 <h1>Buffer Tricks</h1>
 <div id='summary'>Software Systems for Music Technology</div>
@@ -176,4 +176,4 @@ c = Condition.new;
 {~buffers.do{|item|
 {PlayBuf.ar(item.numChannels, item.bufnum)/~buffers.size}.play;}}.fork
 )</pre>
-<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Code Examples/Buffer Tricks.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Code Examples/Buffer Tricks.schelp</a><br>link::SSfMT/Code Examples/Buffer Tricks::<br>sc version: 3.8.0</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Study Guides/Buffer Tricks.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Study Guides/Buffer Tricks.schelp</a><br>link::SSfMT/Study Guides/Buffer Tricks::<br>sc version: 3.8.0</div></div></body></html>
