--- a/SSfMT.html
+++ b/SSfMT.html
@@ -40,7 +40,7 @@
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a><li><a href="./SSfMT/Lectures/Computer Music.html">Computer Music</a><li><a href="./SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a><li><a href="./SSfMT/Lectures/Programming Concepts 2.html">Programming Concepts 2</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a><li><a href="./SSfMT/Lectures/Computer Music.html">Computer Music</a><li><a href="./SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a><li><a href="./SSfMT/Lectures/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./SSfMT/Lectures/Digital Effects.html">Digital Effects</a></ul>
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
