--- a/SSfMT/Study Guides/Synthesis in SuperCollider.html
+++ b/SSfMT/Study Guides/Synthesis in SuperCollider.html
@@ -30,8 +30,8 @@
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Subtractive%20Synthesis'>Subtractive Synthesis</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Noise'>Noise</a></li>
 <ul class='toc'><li class='toc2'><a href='#Coloured%20Noise'>Coloured Noise</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Filters'>Filters</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Pass%20Filters'>Pass Filters</a></li>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#Filters'>Filters</a></li>
+<ul class='toc'><li class='toc2'><a href='#Pass%20Filters'>Pass Filters</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Resonant%20Filters'>Resonant Filters</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Equalisation'>Equalisation</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Resonance%20and%20ringing'>Resonance and ringing</a></li>
@@ -176,7 +176,7 @@ c = Env(a,d, curve:'sin');
 <p><div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/greynoise.png'/><br><b>Grey Noise</b></div>
 
 <p><pre class='code prettyprint lang-sc'>{GrayNoise.ar(0.5)!2}.scope</pre>
-<h3><a class='anchor' name='Filters'>Filters</a></h3>
+<h2><a class='anchor' name='Filters'>Filters</a></h2>
 <div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/filters.png'/><br><b>Filters remove stuff!</b></div>
 <ul>
 <li>“A digital filter is a computational process or algorithm by which a digital signal or sequence of numbers (acting as input) is transformed into a second sequence of numbers termed the output digital signal” (Rabiner et al. 1972)<li>Any digital device with an input and an output is a filter!<li>Commonly referred to devices that boost or attenuate regions of the frequency spectrum<li>Not only frequency domain, but also time domain (reverbs, delays, etc.)</ul>
